syntax = "proto3";

package battleship.proto.bot.v1;

import "core/v1/battleship_core.proto";

service BattleshipBotService {
  rpc GetField(GetFieldRequest) returns (GetFieldResponse);
  rpc GetStrike(GetStrikeRequest) returns (GetStrikeResponse);
}


message GetFieldRequest {
  string game_id = 1;
}

message GetFieldResponse {
  string field = 1;
}

message GetStrikeRequest {
  string game_id = 1;
  battleship.proto.core.v1.BattleshipFieldProto own_field = 2;
  BattleshipOtherFieldProto other_field = 3;
}

message GetStrikeResponse {
  battleship.proto.core.v1.BattleshipPosProto pos = 1;
}

message BattleshipOtherFieldProto {
  repeated battleship.proto.core.v1.BattleshipPosProto hits = 1;
  repeated battleship.proto.core.v1.BattleshipPosProto misses = 2;
}
